--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
             <ul class="ctrlbtnlist">
                 <li class="oneloop"><i class="fa fa-retweet"></i></li>
                 <li class="backward"><i class="fa fa-backward fa-2x"></i></li>
-                <li class="play"><i class="fa fa-play-circle fa-4x"></i></li>
+                <li class="play"><i class="fa fa-pause-circle fa-4x"></i></li>
                 <li class="forward"><i class="fa fa-forward fa-2x"></i></li>
-                <li class="random active"><i class="fa fa-random"></i></li>
+                <li class="random"><i class="fa fa-random"></i></li>
             </ul>
             <div class="song-info">
                 <div class="song-ct">
@@ -60,62 +60,6 @@
         </div>
         <div class="songlist-ct">
             <ul class="songlist">
-                <li class="songitem">
-                    <img src="img/2.jpg">
-                    <div class="intro-ct">
-                        <p class="i-name">13 Months</p>
-                        <p class="i-info">Dream Dance Vol.71 - Raven</p>
-                    </div>
-                    <span class="s-timetotal">3:25</span>
-                </li>
-                <li class="songitem">
-                    <img src="img/2.jpg">
-                    <div class="intro-ct">
-                        <p class="i-name">13 Months</p>
-                        <p class="i-info">Dream Dance Vol.71 - Raven</p>
-                    </div>
-                    <span class="s-timetotal">3:25</span>
-                </li>
-                <li class="songitem">
-                    <img src="img/2.jpg">
-                    <div class="intro-ct">
-                        <p class="i-name">13 Months</p>
-                        <p class="i-info">Dream Dance Vol.71 - Raven</p>
-                    </div>
-                    <span class="s-timetotal">3:25</span>
-                </li>
-                <li class="songitem">
-                    <img src="img/2.jpg">
-                    <div class="intro-ct">
-                        <p class="i-name">13 Months</p>
-                        <p class="i-info">Dream Dance Vol.71 - Raven</p>
-                    </div>
-                    <span class="s-timetotal">3:25</span>
-                </li>
-                <li class="songitem">
-                    <img src="img/2.jpg">
-                    <div class="intro-ct">
-                        <p class="i-name">13 Months</p>
-                        <p class="i-info">Dream Dance Vol.71 - Raven</p>
-                    </div>
-                    <span class="s-timetotal">3:25</span>
-                </li>
-                <li class="songitem">
-                    <img src="img/2.jpg">
-                    <div class="intro-ct">
-                        <p class="i-name">13 Months</p>
-                        <p class="i-info">Dream Dance Vol.71 - Raven</p>
-                    </div>
-                    <span class="s-timetotal">3:25</span>
-                </li>
-                <li class="songitem">
-                    <img src="img/2.jpg">
-                    <div class="intro-ct">
-                        <p class="i-name">13 Months</p>
-                        <p class="i-info">Dream Dance Vol.71 - Raven</p>
-                    </div>
-                    <span class="s-timetotal">3:25</span>
-                </li>
             </ul>
         </div>
     </section>
