--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,12 @@
     <section id="player">
         <div class="player-cover">
             <div class="lyric-ct">
-                <ul class="lyriclist">
-                    <li>And it feels like flying, flying</li>
-                    <li>We went to the edge</li>
-                    <li class="active">I almost give up trying, trying</li>
-                    <li>I almost give up trying, trying</li>
-                    <li>I hear you call out of the blue</li>
-                </ul>
+                <div class="lyric-cover-ct">
+                    <div class="lyric-cover">
+                        <ul class="lyriclist">
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div class="btn volume"><i class="fa fa-volume-up"></i></div>
             <div class="btn list"><i class="fa fa-list-ul"></i></div>
@@ -34,8 +33,8 @@
             </ul>
             <div class="song-info">
                 <div class="song-ct">
-                    <div class="s-name">13 Months</div>
-                    <div class="s-singer">Raven</div>
+                    <div class="s-name"></div>
+                    <div class="s-singer"></div>
                 </div>
             </div>
             <div class="progress">
@@ -45,16 +44,29 @@
                     <span class="pointnow"></span>
                     <span class="pasttime"></span>
                 </div>
-                <span class="timetotal">3:25</span>
+                <span class="timetotal"></span>
             </div>
         </div>
     </section>
     <section id="playlist">
         <div class="playheader">
-            <i class="fa fa-th-large"></i>
+            <div class="chanel">
+                <i class="fa fa-th-large"></i>
+                <ul class="chanellist">
+                    <li>云音乐热歌榜</li>
+                    <li>云音乐飙升榜</li>
+                    <li>云音乐电音榜</li>
+                    <li>云音乐ACG音乐榜</li>
+                    <li>云音乐原创歌曲榜</li>
+                    <li>UK排行榜周榜</li>
+                    <li>KTV唛榜</li>
+                    <li>Hit FM Top榜</li>
+                </ul>
+            </div>
+
             <div class="search">
-                <label for="q" id="q_label">搜索</label>
-                <input id="q" type="text">
+                <label for="sq" id="sq_label"></label>
+                <input id="sq" type="text">
                 <i class="fa fa-search"></i>
             </div>
         </div>
