--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
     </section>
 </div>
 
-<script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+<script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 <script src="js/music.js"></script>
 </body>
 </html>
